--- a/app/src/main/res/layouts/noticias/layout/activity_noticias.xml
+++ b/app/src/main/res/layouts/noticias/layout/activity_noticias.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".NavigationActivity"
-    tools:showIn="@layout/app_bar_navigation">
+    tools:context=".NoticiasActivity">
 
 </android.support.constraint.ConstraintLayout>
