--- a/app/src/main/res/layouts/comunicados/layout/comunicados_list_view.xml
+++ b/app/src/main/res/layouts/comunicados/layout/comunicados_list_view.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="comunicado" type="boneo.com.proyectoboneoapp.model.DestinatarioComunicado"/>
+        <variable name="viewModel" type="boneo.com.proyectoboneoapp.viewmodels.ComunicadosViewModel"/>
     </data>
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/activity_comunicados"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ComunicadosActivity">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@{comunicado.toString()}"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
