--- a/app/src/main/res/layouts/comunicados/layout/activity_comunicados.xml
+++ b/app/src/main/res/layouts/comunicados/layout/activity_comunicados.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <data>
-        <variable name="comunicado" type="boneo.com.proyectoboneoapp.model.DestinatarioComunicado"/>
-    </data>
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/activity_comunicados"
+<android.support.constraint.ConstraintLayout android:id="@+id/activity_comunicados"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".activities.comunicados.ComunicadosActivity"
+xmlns:android="http://schemas.android.com/apk/res/android">
+    <android.support.v7.widget.RecyclerView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/comunicados_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ComunicadosActivity">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@{comunicado.toString()}"/>
-    </android.support.constraint.ConstraintLayout>
-</layout>
+        app:layoutManager="LinearLayoutManager"
+        tools:listitem="@layout/comunicados_list_item" />
+</android.support.constraint.ConstraintLayout>
