--- a/app/src/main/res/layouts/navigation/layout/content_navigation.xml
+++ b/app/src/main/res/layouts/navigation/layout/content_navigation.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".BaseNavigationActivity"
+    tools:context=".activities.base.BaseNavigationActivity"
     tools:showIn="@layout/app_bar_navigation">
 </android.support.constraint.ConstraintLayout>
