--- a/app/src/main/res/layouts/navigation/layout/activity_go_back.xml
+++ b/app/src/main/res/layouts/navigation/layout/activity_go_back.xml
@@ -7,9 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context=".activities.base.BaseGoBackActivity">
 
-    <include
-        layout="@layout/app_bar_go_back"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <include layout="@layout/app_bar_go_back" />
 
 </android.support.constraint.ConstraintLayout>
