--- a/app/src/main/res/layouts/navigation/layout/app_bar_go_back.xml
+++ b/app/src/main/res/layouts/navigation/layout/app_bar_go_back.xml
@@ -15,7 +15,8 @@
             android:id="@+id/go_back_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorPrimary">
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
