--- a/app/src/main/res/layouts/comunicados/layout/activity_comunicados_detail.xml
+++ b/app/src/main/res/layouts/comunicados/layout/activity_comunicados_detail.xml
@@ -13,45 +13,37 @@
             android:orientation="vertical"
             android:padding="16dp"
             >
-            <RelativeLayout
+            <TextView
+                android:id="@+id/comunicados_detail_asunto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <TextView
-                    android:id="@+id/comunicados_detail_asunto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/lorem_ipsum_short"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-            </RelativeLayout>
-            <RelativeLayout
+                android:text="@string/lorem_ipsum_short"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="8dp">
 
                 <ImageView
                     android:id="@+id/comunicados_detail_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:adjustViewBounds="false"
-                    android:cropToPadding="false"
-                    android:layout_centerVertical="true"
-                    app:srcCompat="@drawable/ic_email_black_24dp" />
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:tint="@color/colorActivityIcon"
+                    app:srcCompat="@drawable/ic_email_black_24dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_toRightOf="@id/comunicados_detail_image"
-                    android:layout_toEndOf="@id/comunicados_detail_image"
-                    android:paddingLeft="16dp"
-                    android:paddingStart="16dp">
+                    app:layout_constraintLeft_toRightOf="@id/comunicados_detail_image"
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                >
 
                     <TextView
                         android:id="@+id/comunicados_detail_emisor"
@@ -65,7 +57,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/date_placeholder" />
                 </LinearLayout>
-            </RelativeLayout>
+            </android.support.constraint.ConstraintLayout>
             <TextView
                 android:id="@+id/comunicados_item_detail_mensaje"
                 android:layout_width="match_parent"
