--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -16,6 +16,14 @@
             android:id="@+id/nav_comunicados"
             android:icon="@drawable/ic_email_black_24dp"
             android:title="@string/comunicados" />
+        <item
+            android:id="@+id/nav_eventos"
+            android:icon="@drawable/ic_event_black_24dp"
+            android:title="@string/eventos" />
+        <item
+            android:id="@+id/nav_horarios"
+            android:icon="@drawable/ic_watch_later_black_24dp"
+            android:title="@string/horarios" />
     </group>
 
     <item android:title="@string/mi_cuenta">
