--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#7B1FA2</color>
     <color name="colorPrimaryDark">#6A1B9A</color>
     <color name="colorAccent">#AA00FF</color>
+    <color name="colorActivityIcon">#727272</color>
 </resources>
