--- a/app/src/main/res/layouts/horarios/layout/activity_horarios.xml
+++ b/app/src/main/res/layouts/horarios/layout/activity_horarios.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".activities.horarios.HorariosActivity">
 
+    <include layout="@layout/loader" />
+
+    <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/horarios_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/horarios_list_item" />
 </android.support.constraint.ConstraintLayout>
