--- a/app/src/main/res/layouts/perfilacademico/layout/activity_perfil_academico.xml
+++ b/app/src/main/res/layouts/perfilacademico/layout/activity_perfil_academico.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".activities.perfilacademico.PerfilAcademicoActivity">
 
+    <include layout="@layout/loader" />
+
+    <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/perfil_academico_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/perfil_academico_list_item" />
 </android.support.constraint.ConstraintLayout>
