--- a/app/src/main/res/layouts/horarios/layout/horarios_section_list_item.xml
+++ b/app/src/main/res/layouts/horarios/layout/horarios_section_list_item.xml
@@ -16,7 +16,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:singleLine="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/textListTitle"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
