--- a/app/src/main/res/layouts/perfilacademico/layout/activity_perfil_academico_detail.xml
+++ b/app/src/main/res/layouts/perfilacademico/layout/activity_perfil_academico_detail.xml
@@ -1,69 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_comunicados_detail"
+    android:id="@+id/activity_perfil_academico_detail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/perfil_academico_detail_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
-            >
-            <TextView
-                android:id="@+id/comunicados_detail_asunto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lorem_ipsum_short"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp">
-
-                <ImageView
-                    android:id="@+id/comunicados_detail_image"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:tint="@color/colorActivityIcon"
-                    app:srcCompat="@drawable/ic_email_black_24dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintLeft_toRightOf="@id/comunicados_detail_image"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                >
-
-                    <TextView
-                        android:id="@+id/comunicados_detail_emisor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/email_placeholder" />
-
-                    <TextView
-                        android:id="@+id/comunicados_detail_fecha"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/date_placeholder" />
-                </LinearLayout>
-            </android.support.constraint.ConstraintLayout>
-            <TextView
-                android:id="@+id/comunicados_item_detail_mensaje"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lorem_ipsum"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/perfil_academico_list_item" />
 </android.support.constraint.ConstraintLayout>
