--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,23 @@
         <item name="android:layout_height">match_parent</item>
     </style>
 
+    <style name="textTitle">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="textBody">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="textListTitle">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="textListItemTitle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
     <style name="TextAppearance.AppCompat.Body1.highlight" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textColor" >@color/colorPrimary</item>
     </style>
