noticias somewhat working

--- a/app/src/main/res/layouts/auth/layout/activity_logout.xml
+++ b/app/src/main/res/layouts/auth/layout/activity_logout.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.auth.LoginActivity">
+    tools:context=".activities.auth.LogoutActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/logout_confirm_text"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+                style="@style/textListItemTitle" />
 
             <Button
                 android:id="@+id/logout_button"
