--- a/app/src/main/res/layouts/noticias/layout/activity_noticias.xml
+++ b/app/src/main/res/layouts/noticias/layout/activity_noticias.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activities.noticias.NoticiasActivity">
 
+    <include layout="@layout/loader" />
+
+    <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/noticias_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/noticias_list_item" />
+
 </android.support.constraint.ConstraintLayout>
