--- a/app/src/main/res/layouts/comunicados/layout/activity_comunicados.xml
+++ b/app/src/main/res/layouts/comunicados/layout/activity_comunicados.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_comunicados"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="16dp"
     tools:context=".activities.comunicados.ComunicadosActivity">
 
     <include layout="@layout/loader" />
