--- a/app/src/main/res/drawable/text_circular_background.xml
+++ b/app/src/main/res/drawable/text_circular_background.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" >
     <corners android:radius="10dip" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimaryDark" />
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/colorPrimary" />
 </shape>
