--- a/app/src/main/res/layouts/noticias/layout/activity_noticias.xml
+++ b/app/src/main/res/layouts/noticias/layout/activity_noticias.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="16dp"
     tools:context=".activities.noticias.NoticiasActivity">
 
     <include layout="@layout/loader" />
