--- a/app/src/main/res/layouts/noticias/layout/activity_noticias_detail.xml
+++ b/app/src/main/res/layouts/noticias/layout/activity_noticias_detail.xml
@@ -27,11 +27,11 @@
         android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_rss_feed_black_24dp"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detail_noticias_title" />
+        app:layout_constraintTop_toBottomOf="@id/detail_noticias_title"
+        app:srcCompat="@drawable/ic_rss_feed_black_24dp" />
 
     <TextView
         android:id="@+id/detail_noticias_contenido"
