--- a/app/src/main/res/layouts/noticias/layout/noticias_list_item.xml
+++ b/app/src/main/res/layouts/noticias/layout/noticias_list_item.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_rss_feed_black_24dp"
+        app:srcCompat="@drawable/ic_rss_feed_black_24dp"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -38,6 +38,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
