--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,30 +40,30 @@
 
     <style name="textTitle">
         <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/primaryText</item>
     </style>
 
     <style name="textBody">
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/primaryText</item>
     </style>
 
     <style name="textListTitle">
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/primaryText</item>
+    </style>
+
+    <style name="textListSecondary">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/secondaryText</item>
     </style>
 
     <style name="textListItemTitle">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textColor">@color/primaryText</item>
     </style>
 
-    <style name="TextAppearance.AppCompat.Body1.highlight" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:textColor" >@color/colorPrimary</item>
-    </style>
-
-    <style name="TextAppearance.AppCompat.Body2.highlight" parent="TextAppearance.AppCompat.Body2">
-        <item name="android:textColor" >@color/colorPrimary</item>
-    </style>
-
-    <style name="TextAppearance.AppCompat.Small.highlight" parent="TextAppearance.AppCompat.Small">
+    <style name="textListSecondary.highlight" parent="textListSecondary">
         <item name="android:textColor" >@color/colorPrimary</item>
     </style>
 </resources>
