--- a/app/src/main/res/layouts/clases_virtuales/layout/activity_clases_virtuales.xml
+++ b/app/src/main/res/layouts/clases_virtuales/layout/activity_clases_virtuales.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_clases_virtuales"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.eventos.EventosActivity">
+    tools:context=".activities.clasesvirtuales.ClasesVirtualesActivity">
 
     <include layout="@layout/loader" />
     <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/eventos_recycler_view"
+        android:id="@+id/clases_virtuales_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
