--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -9,6 +9,14 @@
             android:icon="@drawable/ic_rss_feed_black_24dp"
             android:title="@string/noticias" />
         <item
+            android:id="@+id/nav_eventos"
+            android:icon="@drawable/ic_event_black_24dp"
+            android:title="@string/eventos" />
+        <item
+            android:id="@+id/nav_clases_virtuales"
+            android:icon="@drawable/ic_library_books_black_24dp"
+            android:title="@string/clases_virtuales" />
+        <item
             android:id="@+id/nav_perfil_academico"
             android:icon="@drawable/ic_insert_chart_black_24dp"
             android:title="@string/perfil_academico" />
@@ -17,21 +25,14 @@
             android:icon="@drawable/ic_email_black_24dp"
             android:title="@string/comunicados" />
         <item
-            android:id="@+id/nav_eventos"
-            android:icon="@drawable/ic_event_black_24dp"
-            android:title="@string/eventos" />
-        <item
             android:id="@+id/nav_horarios"
             android:icon="@drawable/ic_watch_later_black_24dp"
             android:title="@string/horarios" />
+
     </group>
 
     <item android:title="@string/mi_cuenta">
         <menu>
-            <item
-                android:id="@+id/nav_configuracion"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="@string/configuracion" />
             <item
                 android:id="@+id/nav_cerrar_sesion"
                 android:icon="@drawable/ic_lock_black_24dp"
