--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -28,6 +28,10 @@
             android:id="@+id/nav_horarios"
             android:icon="@drawable/ic_watch_later_black_24dp"
             android:title="@string/horarios" />
+        <item
+            android:id="@+id/nav_ayuda"
+            android:icon="@drawable/ic_help_outline_black_24dp"
+            android:title="@string/ayuda" />
 
     </group>
 
